<resources>
    <string name="app_name">ExLog</string>
    <string name="nav_templates">Templates</string>
    <string name="nav_start">Start</string>
    <string name="nav_history">History</string>
    <string name="tab_exercises">Exercises</string>
    <string name="tab_workouts">Workouts</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="edit_exercise">Edit Exercise</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="exercise_category">Category (optional)</string>
    <string name="exercise_note">Note (optional)</string>
    <string name="exercise_example_link">Example Link (optional)</string>
    <string name="more_details">More details ▾</string>
    <string name="less_details">Less details ▴</string>
    <string name="new_category">New category</string>
    <string name="add">Add</string>
    <string name="select_category">Select Category</string>
    <string name="no_category">No category</string>
    <string name="search_exercises">Search exercises…</string>
    <string name="filter_by_category">Filter by category</string>
    <string name="all_categories">All categories</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="add_workout">Add Workout</string>
    <string name="edit_workout">Edit Workout</string>
    <string name="workout_name">Workout Name</string>
    <string name="add_exercises">Add Exercises</string>
    <string name="reference_weight">Ref. Weight</string>
    <string name="target_sets">Sets</string>
    <string name="target_reps">Reps</string>
    <string name="start_session">Start Session</string>
    <string name="finish_session">Finish Session</string>
    <string name="select_workout">Select a Workout</string>
    <string name="session_history">Session History</string>
    <string name="no_exercises">No exercises yet. Tap + to add one!</string>
    <string name="no_workouts">No workouts yet. Go to Templates to add one!</string>
    <string name="no_sessions">No sessions yet. Start a workout!</string>
    <string name="weight_hint">Weight</string>
    <string name="reps_hint">Reps</string>
    <string name="set_label">Set %d</string>
    <string name="session_duration">Duration: %s</string>
    <string name="confirm_delete">Are you sure you want to delete this?</string>
    <string name="pick_exercises">Pick Exercises</string>
    <string name="graph_time_period">Time Period</string>
    <string name="graph_select_exercise">Select Exercise</string>
    <string name="graph_1w">1W</string>
    <string name="graph_1m">1M</string>
    <string name="graph_1y">1Y</string>
    <string name="graph_all">All</string>
    <string name="graph_custom">Custom</string>
    <string name="graph_display_data">Display Data</string>
    <string name="graph_weight">Weight</string>
    <string name="graph_reps">Reps</string>
    <string name="filter_by_date">Filter by date</string>
    <string name="clear">Clear</string>
    <string name="no_past_sessions">No past sessions found</string>
    <string name="pause">Pause</string>
    <string name="timer_default">00:00</string>
    <string name="checkmark">✓</string>
    <string name="info_label">ℹ Info</string>
    <string name="header_set">SET</string>
    <string name="header_weight">WEIGHT</string>
    <string name="header_reps">REPS</string>
    <string name="header_done">DONE</string>
    <string name="tab_history">History</string>
    <string name="tab_graph">Graph</string>
    <string name="resume">Resume</string>
    <string name="not_completed">Not Completed</string>
    <string name="dash">-</string>
    <string name="tap_start_hint">Tap Start to begin session</string>
    <string name="show_info">▾ Show Info</string>
    <string name="hide_info">▴ Hide Info</string>
    <string name="nav_more">More</string>
    <string name="export_data">Export Data</string>
    <string name="import_data">Import Data</string>
    <string name="export_success">Data exported successfully</string>
    <string name="export_failed">Export failed</string>
    <string name="import_success">Data imported successfully</string>
    <string name="import_failed">Import failed</string>
    <string name="import_confirm_title">Import Data</string>
    <string name="import_confirm_message">This will replace ALL existing data. Are you sure?</string>
    <string name="add_set">+ Add Set</string>
    <string name="remove_set">− Remove Set</string>
    <string name="about_app">About App</string>
    <string name="search_hint">Search</string>
    <string name="drag_handle">Drag to reorder</string>
    <string name="unknown_date">Unknown date</string>
</resources>