<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/sessionStartFragment">

    <fragment
        android:id="@+id/sessionStartFragment"
        android:name="com.qprovep.exlog.ui.session.SessionStartFragment"
        android:label="@string/nav_start"
        tools:layout="@layout/fragment_session_start">

        <action
            android:id="@+id/action_sessionStart_to_session"
            app:destination="@id/sessionFragment" />
    </fragment>

    <fragment
        android:id="@+id/sessionFragment"
        android:name="com.qprovep.exlog.ui.session.SessionFragment"
        android:label="@string/start_session"
        tools:layout="@layout/fragment_session">

        <argument
            android:name="startWorkoutId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/historyFragment"
        android:name="com.qprovep.exlog.ui.history.HistoryFragment"
        android:label="@string/nav_history"
        tools:layout="@layout/fragment_history">

        <action
            android:id="@+id/action_history_to_sessionDetail"
            app:destination="@id/sessionDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/sessionDetailFragment"
        android:name="com.qprovep.exlog.ui.history.SessionDetailFragment"
        android:label="Session Detail"
        tools:layout="@layout/fragment_session_detail">

        <argument
            android:name="sessionId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/templatesFragment"
        android:name="com.qprovep.exlog.ui.templates.TemplatesFragment"
        android:label="@string/nav_templates"
        tools:layout="@layout/fragment_templates">

        <action
            android:id="@+id/action_templates_to_workoutDetail"
            app:destination="@id/workoutDetailFragment" />
            
        <action
            android:id="@+id/action_templates_to_sessionFragment"
            app:destination="@id/sessionFragment" />
    </fragment>

    <fragment
        android:id="@+id/workoutDetailFragment"
        android:name="com.qprovep.exlog.ui.workout.WorkoutDetailFragment"
        android:label="@string/edit_workout"
        tools:layout="@layout/fragment_workout_detail">

        <argument
            android:name="workoutId"
            app:argType="integer"
            android:defaultValue="-1" />
    </fragment>

</navigation>
